--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@ When you look into an abyss, the abyss also looks into you.
 		<link rel="stylesheet" href="assets/css/responsive-addon.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/3.1.0/css/font-awesome.min.css">       
 
+		<!-- Typekit -->
+        <script type="text/javascript" src="//use.typekit.net/mng3caa.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         <!-- Mobile View -->
         <meta name="viewport" content="width=device-width">
          
