--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ When you look into an abyss, the abyss also looks into you.
 
 <p>고객 사례를 통한 경험 및 연구로 부터 얻은 정보들은 다음 프로젝트에 반영되어 오픈소스 리소스 및 다운로드 페이지에서 확인할 수 있습니다.</p>
 
+<a href="http://blog.redfrost.com" class="btn btn-danger btn-large"><i class="icon-chevron-right"></i> VIEW BLOG</a>
 				<p><hr></p>
 				</div>
 			</div>		
@@ -219,10 +220,10 @@ When you look into an abyss, the abyss also looks into you.
 	<p>읽기에 최적화된 웹 타이포그라피에 대한 연구</p>	
 
 	<h4><a href="http://www.emoji-cheat-sheet.com">EMOJI CHEAT SHEET</a></h4>
-	<p>베이스캠프 이모티콘 설명 페이지</p>
+	<p>베이스캠프 이모티콘 리스트</p>
 
-	<h4><a href="http://www.29digital.net/grid/">960gs 계산기</a></h4>
-	<p><a href="http://960.gs">960gs</a> 기반의 그리드 계산기</p>
+	<h4><a href="http://fortawesome.github.io/Font-Awesome/cheatsheet/">Fontawesome Icons</a></h4>
+	<p>Font Awesome 아이콘 리스트</p>
 	
 </div>
 
@@ -248,9 +249,9 @@ When you look into an abyss, the abyss also looks into you.
 	  		<div class="footer_menu">
       			<ul class="footer_menu_box">
                     <li><a onmouseover="this.style.cursor='pointer'" rel="popover" data-placement="top" data-content="This website is hosted in Google Drive. Powered by with Bootstrap, H5BP and Font Awesome." title="About this page">About</a></li> 	
-      			  	<li><a href="#">Website</a></li>
+      			  	<li><a href="http://blog.redfrost.com">Blog</a></li>
       			  	<li><a href="http://www.behance.net/simonalex">Portfolio</a></li>
-      			  	<li><a onmouseover="this.style.cursor='pointer'" rel="tooltip" data-placement="top" title="V1.2.3">Version</a></li> 			  	                    
+      			  	<li><a onmouseover="this.style.cursor='pointer'" rel="tooltip" data-placement="top" title="V0.9">Version</a></li> 			  	                    
       			</ul>
       		</div>
                           
