--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@ When you look into an abyss, the abyss also looks into you.
 				
 				<p>이 사이트는 REDFROST DESIGN의 개발 정보 사이트입니다. 현재 진행 중인 프로젝트와 데모를 소개하고 정보를 공유합니다. 보다 빠른 웹 개발을 위한 프레임워크, 및 커스터마이제이션에 대한 연구와 함께 디자인 트랜드에 대한 정보를 제공합니다.</p>
 
-<p>연구의 초점은 Front-end, Data visualisation, 그리고 Mobile device에 맞춰져 있습니다.</p>
-
-<p>고객 사례를 통한 경험 및 연구로 부터 얻은 정보들은 다음 프로젝트에 반영되어 오픈소스 리소스 및 다운로드 페이지에서 확인할 수 있습니다.</p>
+<p>주요 주제는 Front-end, Data visualisation, 그리고 Mobile device에 맞춰져 있으며, 고객 사례를 통한 경험 및 연구로 부터 얻은 정보들은 다음 프로젝트에 반영되어 오픈소스 리소스 및 다운로드 페이지에서 확인할 수 있습니다.</p>
 
 <a href="http://blog.redfrost.com" class="btn btn-danger btn-large"><i class="icon-chevron-right"></i> VIEW BLOG</a>
 				<p><hr></p>
