--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ When you look into an abyss, the abyss also looks into you.
          
     </head>
 
-    <body id="home" data-spy="scroll" data-offset-top="200">
+    <body id="home" data-spy="scroll">
     <div id="master-wrap">
 
         <header class="navbar navbar-fixed-top">
