Nav link update

--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@ When you look into an abyss, the abyss also looks into you.
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="http://redfrost.com/prototype/">프로토타입</a></li>
-                                    <li><a href="http://redfrost.com/stacks/">스택스</a></li>
-                                    <li><a href="http://redfrost.com/krystal/">크리스탈</a></li>
+                                    <li class="nav-header">Frameworks</li>
+                                    <li><a href="http://simonalex.com/dev/dakota">프로토타입</a></li>
+                                    <li><a href="http://redfrost.com/Stacks/">스택스</a></li>
+                                    <li><a href="http://redfrost.com/Krystal/">크리스탈</a></li>
                                     <li class="divider"></li>
-                                    <li class="nav-header">다운로드</li>
+                                    <li class="nav-header">Download</li>
                                     <li><a href="http://www.behance.net/gallery/iPad-Presentation-Template/9319425">iPad 템플레이트</a></li>
                                     <li><a href="http://www.behance.net/gallery/iOS7-6-Icon-guide/9259803">iOS 아이콘 템플레이트</a></li>
                                 </ul>
