--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ When you look into an abyss, the abyss also looks into you.
                     <p class="maker">Redfrost Design</p>
                 </div>
                   
-                <p class="back_top"><a href="#body"><i class="icon-arrow-up"></i> Back To Top</a></p>                             
+                <p class="back_top"><a href="#body"><i class="icon-chevron-up"></i> Back To Top</a></p>                             
               
             </section>  
         </footer>
