--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ When you look into an abyss, the abyss also looks into you.
                     </a>
                     
                     <!-- Logo -->
-                    <a class="brand" href="#"><strong><i class="icon-bolt"></i> Redmund Frost</strong></a>
+                    <a class="brand" href="index.html"><strong><i class="icon-bolt"></i> Redmund Frost</strong></a>
         
                     <!-- Navigation -->
                     <nav class="nav-collapse collapse">
