--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ When you look into an abyss, the abyss also looks into you.
 
 		<!-- Icons -->		
 		<link rel="apple-touch-icon-precomposed" href="assets/img/apple-touch-icon.png">
-		
+        <link rel="image_src" href="http://redfrost.com/assets/img/apple-touch-icon.png" />
+        		
 		<!-- Scripts -->
         <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
