Mobile line-height fix

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ When you look into an abyss, the abyss also looks into you.
     <div ontouchstart="this.classList.toggle('hover');" class="link-box">
 	<a class="link-img" href="http://cdnjs.com/"><img src="assets/img/link03.jpg"></a>
 	<h4><a href="http://cdnjs.com/">CDNJS</a></h4>
-	<p>유명 스크립트 및 어셋을 통합 제공는 CDN</p>
+	<p>유명 스크립트 및 어셋 CDN 리스트</p>
     </div>
     
     <div ontouchstart="this.classList.toggle('hover');" class="link-box">
