--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ When you look into an abyss, the abyss also looks into you.
         <meta name="author" content="simonalex">
 		<meta name="publisher" content="redfrost"/>
 		<meta name="keywords" content=""> 
+        <meta property="og:image" content="http://redfrost.com/assets/img/apple-touch-icon.png" />
 
 		<!-- Icons -->		
 		<link rel="apple-touch-icon-precomposed" href="assets/img/apple-touch-icon.png">
-        <link rel="image_src" href="http://redfrost.com/assets/img/apple-touch-icon.png" />
         		
 		<!-- Scripts -->
         <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
