Meta data - open graph

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@ When you look into an abyss, the abyss also looks into you.
 
     	<!-- Site info -->          
         <title>Redmund Frost</title>
-        <meta name="description" content="Front-end web developement and media design">
-        <meta name="author" content="simonalex">
-		<meta name="publisher" content="redfrost"/>
-		<meta name="keywords" content=""> 
-        <meta property="og:image" content="http://redfrost.com/assets/img/apple-touch-icon.png" />
+        <meta property="og:title" content="Redmund Frost" />
+        <meta property="og:description" name="description" content="Front-end web development and media design" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="https://dl.dropboxusercontent.com/u/16142569/assets/apple-touch-icon-redfrost.png" />
+        <meta name="author" content="simonalex.com">
+        <meta name="designer" content="redfrost design"/>
+        <meta name="copyright" content="redfrost.com">
+        <meta name="keywords" content=""> 
 
 		<!-- Icons -->		
 		<link rel="apple-touch-icon-precomposed" href="assets/img/apple-touch-icon.png">
