--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ When you look into an abyss, the abyss also looks into you.
 
         <meta name="author" content="simonalex.com">
         <meta name="designer" content="redfrost design">
-        <meta name="copyright" content="redfrost.com">
+        <meta name="rightsHolder" content="redfrost.com">
         <meta name="keywords" content=""> 
 
 		<!-- Icons -->		
@@ -86,7 +86,7 @@ When you look into an abyss, the abyss also looks into you.
                                 </ul>
                             </li>                                                                             
                             <li><a href="#links">Links</a></li> 
-                            <li><a href="mailto:info@redfrost.com?subject=From RD Lab: ">Contact</a></li>                            
+                            <li><a href="mailto:info@redfrost.com?subject=From%20RD%20Lab:%20">Contact</a></li>                            
                         </ul>
                     </nav><!--/.nav-collapse -->
                 </div>
@@ -127,7 +127,7 @@ When you look into an abyss, the abyss also looks into you.
 				
 			</div>		
 
-            <p><hr></p>
+            <div><hr></div>
 				
             <div id="project" class="row">
 	            <div class="span12">
@@ -158,7 +158,7 @@ When you look into an abyss, the abyss also looks into you.
                 </div>
             </div>
 
-            <p><hr></p>
+            <div><hr></div>
 
             <div id="links" class="row">
         	<div class="span12">
