--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ When you look into an abyss, the abyss also looks into you.
 
         <meta name="author" content="simonalex.com">
         <meta name="designer" content="redfrost design">
-        <meta name="rightsHolder" content="redfrost.com">
+        <meta name="dcterms:rightsHolder" content="redfrost.com">
         <meta name="keywords" content=""> 
 
 		<!-- Icons -->		
@@ -327,7 +327,7 @@ When you look into an abyss, the abyss also looks into you.
   
               			<li><a class="snslink02" href="http://www.linkedin.com/pub/alex-lim/2b/849/25a"><i class="icon-linkedin"></i></a></li>
 
-						<li><a class="snslink04" href="mailto:info@redfrost.com?subject=From RD Lab:"><i class="icon-envelope-alt"></i></a></li>
+						<li><a class="snslink04" href="mailto:info@redfrost.com?subject=From%20RD%20Lab:%20"><i class="icon-envelope-alt"></i></a></li>
         			</ul>
         		</div>
     
