--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ When you look into an abyss, the abyss also looks into you.
 
         <meta name="author" content="simonalex.com">
         <meta name="designer" content="redfrost design">
-        <meta name="dcterms:rightsHolder" content="redfrost.com">
+        <meta name="dcterms.rightsHolder" content="Copyright (c) redfrost.com">
         <meta name="keywords" content=""> 
 
 		<!-- Icons -->		
