Open graph edit

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html xmlns="http://www.w3.org/1999/xhtml" prefix="og: http://ogp.me/ns#">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -16,8 +13,8 @@ When you look into an abyss, the abyss also looks into you.
     	<!-- Site info -->          
         <title>Redmund Frost</title>
         <meta property="og:title" content="Redmund Frost" />
-        <meta property="og:description" name="description" content="Front-end web development and media design" />
-        <meta property="og:url" content="http://www.redfrost.com/" />
+        <meta name="description" property="og:description" content="Front-end web development and media design" />
+        <meta property="og:url" content="http://redfrost.com/" />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="https://dl.dropboxusercontent.com/u/16142569/assets/apple-touch-icon-redfrost.png" />
 
