Open graph optimised

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@ When you look into an abyss, the abyss also looks into you.
 
     	<!-- Site info -->          
         <title>Redmund Frost</title>
-        <meta property="og:title" content="Redmund Frost" />
-        <meta name="description" property="og:description" content="Front-end web development and media design" />
         <meta property="og:url" content="http://redfrost.com/" />
-        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="Redfrost Design Lab" />
+        <meta property="og:title" content="Redmund Frost" />
         <meta property="og:image" content="https://dl.dropboxusercontent.com/u/16142569/assets/apple-touch-icon-redfrost.png" />
+        <meta property="og:description" name="description" content="Front-end web development and media design" />
+        <meta property="fb:app_id" content="" />
+        <meta property="og:type" content="website" />
 
         <meta name="author" content="simonalex.com">
         <meta name="designer" content="redfrost design">
