--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ When you look into an abyss, the abyss also looks into you.
         <meta property="og:title" content="Redmund Frost" />
         <meta property="og:image" content="https://dl.dropboxusercontent.com/u/16142569/assets/apple-touch-icon-redfrost.png" />
         <meta property="og:description" name="description" content="Front-end web development and media design" />
-        <meta property="fb:app_id" content="" />
+        <!-- <meta property="fb:app_id" content="" /> -->
         <meta property="og:type" content="website" />
 
         <meta name="author" content="simonalex.com">
