Google analytics update

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ When you look into an abyss, the abyss also looks into you.
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     
-      ga('create', 'UA-41704711-1', 'redfrost.github.io');
+      ga('create', 'UA-41958063-2', 'redfrost.com');
       ga('send', 'pageview');
     
     </script>
