Web master tool

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@ When you look into an abyss, the abyss also looks into you.
         <meta property="og:description" name="description" content="Front-end web development and media design" />
         <!-- <meta property="fb:app_id" content="" /> -->
         <meta property="og:type" content="website" />
-
         <meta name="author" content="simonalex.com">
         <meta name="designer" content="redfrost design">
         <meta name="dcterms.rightsHolder" content="Copyright (c) redfrost.com">
         <meta name="keywords" content=""> 
+        <meta name="google-site-verification" content="W1x-Wm2lK4gg2qRf7BR2tM9JpYERmZO8kepkcCkmGY8" />
 
 		<!-- Icons -->		
 		<link rel="apple-touch-icon-precomposed" href="assets/img/apple-touch-icon.png">
