--- a/grid.html
+++ b/grid.html
@@ -68,7 +68,7 @@ When you look into an abyss, the abyss also looks into you.
                     <!-- Navigation -->
                     <nav class="nav-collapse collapse">
                         <ul class="nav">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="http://redfrost.com/">Home</a></li>
                             <li class="active"><a href="grid.html">Bootstrap 2</a></li>
                             <li><a href="grid-bs3.html">Bootstrap 3</a></li>                                                
                         </ul>
