--- a/grid-bs3.html
+++ b/grid-bs3.html
@@ -258,6 +258,9 @@ When you look into an abyss, the abyss also looks into you.
 
     </div><!-- /#master-wrap -->
 
+                
+        <!-- Plugins -->
+        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
         
         <!-- Tracking code -->
         <script type="text/javascript">
