--- a/demo/bootstrap/static.html
+++ b/demo/bootstrap/static.html
@@ -45,13 +45,13 @@
             <div class="navbar-inner">
                     
                 <ul class="nav">
-                    <li><a href="#">Main</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Our Team</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Resource</a></li>
-                    <li><a href="#">Support</a></li>
+                    <li class="active"><a href="http://redfrost.com">Home</a></li>
+                    <li><a href="static.html">Static</a></li>
+                    <li><a href="responsive.html">Responsive</a></li>
+                    <li><a href="responsive2.html">Custom Layout</a></li>
+                    <li><a href="content.html">Content</a></li>
+                    <li><a href="http://redfrost.com/Hutch/">Hutch</a></li>
+                    <li><a href="http://simonalex.com/">Contact</a></li>
                 </ul>          
 
             </div>
