--- a/demo/bootstrap/responsive2.html
+++ b/demo/bootstrap/responsive2.html
@@ -55,10 +55,10 @@
             <nav class="nav-collapse collapse">
             <ul class="nav pull-right">
             
-                <li class="active"><a href="http://redfrost.com">Home</a></li>
+                <li><a href="http://redfrost.com">Home</a></li>
                 <li><a href="static.html">Static</a></li>
                 <li><a href="responsive.html">Responsive</a></li>
-                <li><a href="responsive2.html">Custom Layout</a></li>
+                <li class="active"><a href="responsive2.html">Custom Layout</a></li>
                 <li><a href="content.html">Content</a></li>
          
                 <li class="dropdown">
