--- a/demo/bootstrap/static.html
+++ b/demo/bootstrap/static.html
@@ -45,8 +45,8 @@
             <div class="navbar-inner">
                     
                 <ul class="nav">
-                    <li class="active"><a href="http://redfrost.com">Home</a></li>
-                    <li><a href="static.html">Static</a></li>
+                    <li><a href="http://redfrost.com">Home</a></li>
+                    <li class="active"><a href="static.html">Static</a></li>
                     <li><a href="responsive.html">Responsive</a></li>
                     <li><a href="responsive2.html">Custom Layout</a></li>
                     <li><a href="content.html">Content</a></li>
