--- a/index.html
+++ b/index.html
@@ -372,7 +372,21 @@ When you look into an abyss, the abyss also looks into you.
 
     </div><!-- /#master-wrap -->
 
-        
+
+    <!-- Preloader -->
+    <div id="preloader"><div id="status">&nbsp;</div></div>
+
+
+        <!-- Preloader -->
+<script type="text/javascript">
+	//<![CDATA[
+		$(window).load(function() { // makes sure the whole site is loaded
+			$("#status").fadeOut(); // will first fade out the loading animation
+			$("#preloader").delay(350).fadeOut("slow"); // will fade out the white DIV that covers the website.
+		})
+	//]]>
+</script> 
+
         <!-- Plugins -->
         <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
         
