--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ When you look into an abyss, the abyss also looks into you.
          
     </head>
 
-    <body id="top" data-spy="scroll" style="opacity: 0;">
+    <body id="top" data-spy="scroll" >
     <div id="master-wrap">
 
         <header class="navbar navbar-fixed-top">
