--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ When you look into an abyss, the abyss also looks into you.
     <body id="top" data-spy="scroll">
     
     <!-- Preloader -->
-    <div id="preloader"><div id="status">&nbsp;</div></div>
+    <div id="status" class="progress progress-striped active"><div class="bar" style="width: 100%;"></div></div>
     
     <div id="master-wrap" style="opacity: 0;">
 
