--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ When you look into an abyss, the abyss also looks into you.
 			<div id="hero" class="row">
 				<div class="span12 page-banner">
 				<span class="scroll-fade"><img alt="pagebanner" src="assets/img/banner1.jpg" /></span>
-				<span class="scroll-fade-back"><img alt="pagebanner back" src="assets/img/banner2.jpg" /></span>
+				<span class="scroll-fade-back" style="opacity: 0;"><img alt="pagebanner back" src="assets/img/banner2.jpg" /></span>
 				</div>
 				
 			</div>			
