--- a/grid-bs3.html
+++ b/grid-bs3.html
@@ -31,6 +31,7 @@ When you look into an abyss, the abyss also looks into you.
         <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap3.js"></script>
+        <script type="text/javascript" src="assets/js/custom.js"></script>
         
 		<!-- Typekit -->
         <script type="text/javascript" src="//use.typekit.net/mng3caa.js"></script>
@@ -76,7 +77,7 @@ When you look into an abyss, the abyss also looks into you.
     </head>
 
     <body id="top" data-spy="scroll">
-    <div id="master-wrap">
+    <div id="master-wrap" style="opacity: 0;">
 
         <header class="navbar navbar-fixed-top">
                 <div class="container">
