--- a/demo/bootstrap/responsive.html
+++ b/demo/bootstrap/responsive.html
@@ -152,9 +152,9 @@
     	 	
   </div><!-- /#master-wrap -->
 
-        
-        <!-- Plugins -->
-        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+    <!-- Plugins -->
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/prefixfree.js"></script>
 
 </body>
 </html>
