--- a/demo/bootstrap/responsive2.html
+++ b/demo/bootstrap/responsive2.html
@@ -152,8 +152,9 @@
     	 	
   </div><!-- /#master-wrap -->
 
-    <!-- Plug-ins-->
-	<script src="assets/js/prefixfree.js"></script>
+    <!-- Plugins -->
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/prefixfree.js"></script>
 
 
 </body>
