--- a/demo/bootstrap/responsive3.html
+++ b/demo/bootstrap/responsive3.html
@@ -152,10 +152,9 @@
     	 	
   </div><!-- /#master-wrap -->
 
-    <!-- Plug-ins-->
-	<script src="assets/js/prefixfree.js"></script>
-	<script src="assets/js/smooth-scroll.js"></script>
-	<script src="assets/js/custom.js"></script>
+    <!-- Plugins -->
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/prefixfree.js"></script>
     <script type="text/javascript">
         // Dropdown Menu Fade    
     jQuery(document).ready(function(){
