--- a/demo/bootstrap/responsive-tabs.html
+++ b/demo/bootstrap/responsive-tabs.html
@@ -18,10 +18,10 @@
 	<meta property="og:image" content="assets/ico/thumbnail.png" />
 
 	<!-- Main Scripts -->
-	<script src="assets/js/modernizr.js"></script>
-	<script src="assets/js/jquery.js"></script>
-	<script src="assets/js/bootstrap.js"></script>
-	<script src="assets/js/custom.js"></script>
+	<script type="text/javascript" src="assets/js/modernizr.js"></script>
+	<script type="text/javascript" src="assets/js/jquery.js"></script>
+	<script type="text/javascript" src="assets/js/bootstrap.js"></script>
+	<script type="text/javascript" src="assets/js/custom.js"></script>
 	
 	<!-- Style -->
 	<link rel="stylesheet" href="assets/css/bootstrap.css">
@@ -180,11 +180,9 @@
     	 	
   </div><!-- /#master-wrap -->
 
-    <!-- Plug-ins-->
-	<script src="assets/js/prefixfree.js"></script>
-	<script src="assets/js/smooth-scroll.js"></script>
-	<script src="assets/js/custom.js"></script>
-
+        <!-- Plugins -->
+        <script src="assets/js/plugins.js"></script>
+        <script src="assets/js/prefixfree.js"></script>
 
 </body>
 </html>
