Grid system fix

--- a/grid-bs3.html
+++ b/grid-bs3.html
@@ -225,6 +225,7 @@ When you look into an abyss, the abyss also looks into you.
                     <li><a onmouseover="this.style.cursor='pointer'" rel="popover" data-placement="top" data-content="This website is hosted in Github. Powered by with Bootstrap, H5BP and Font Awesome." title="About this page">About</a></li> 	
       			  	<li><a href="http://blog.redfrost.com">Blog</a></li>
       			  	<li><a href="http://www.behance.net/simonalex">Portfolio</a></li>
+      			  	<li><a href="http://redfrost.com/grid">Grid System</a></li>
       			  	<li><a onmouseover="this.style.cursor='pointer'" rel="tooltip" data-placement="top" title="V0.9">Version</a></li> 			  	                    
       			</ul>
       		</div>
