--- a/index.html
+++ b/index.html
@@ -369,9 +369,9 @@ When you look into an abyss, the abyss also looks into you.
 
     </div><!-- /#master-wrap -->
 
-        <!-- Preloader -->
-        <div id="preloader" class="progress progress-striped active" style="width:200px"><div class="bar" style="width: 100%;"></div></div>
-
+    	<!-- Preloader -->
+    	<div style="width:200px" class="progress progress-striped active" id="preloader"><div style="width: 100%;" class="bar">LOADING</div></div>  
+	
 		<!-- Scripts -->
         <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
